Added ANGLE support

--- a/yabause/src/libretro/Makefile
+++ b/yabause/src/libretro/Makefile
@@ -6,6 +6,7 @@ HAVE_SSE = 1
 __USE_OPENGL_DEBUG__ = 0
 HAVE_MUSASHI = 1
 FORCE_GLES = 0
+HAVE_ANGLE ?= 0
 FASTMATH = 1
 DYNAREC_DEVMIYAX = 0
 USE_ARM_DRC = 0
@@ -353,6 +354,10 @@ FLAGS += $(fpic)
 
 INCFLAGS := $(foreach dir,$(INCLUDE_DIRS),-I$(dir))
 
+ifeq ($(HAVE_ANGLE),1)
+	FORCE_GLES = 1
+	INCFLAGS += -I$(ANGLE_DIR)/include
+endif
 WARNINGS :=
 FLAGS += $(INCFLAGS) $(ENDIANNESS_DEFINES) $(WARNINGS)
 
