--- a/yabause/src/libretro/Makefile.common
+++ b/yabause/src/libretro/Makefile.common
@@ -54,7 +54,13 @@ endif
 
 ifeq ($(FORCE_GLES), 1)
 	FLAGS += -D_OGLES3_
-	LDFLAGS += -lGLESv2
+
+	ifeq ($(HAVE_ANGLE),1)
+			LDFLAGS += -L$(ANGLE_DIR) -lGLESv2
+		else
+			LDFLAGS += -lGLESv2
+	endif
+	
 	ifeq ($(FORCE_GLEW), 0)
 		FLAGS += -DHAVE_OPENGLES -DHAVE_OPENGLES3
 	endif
